# ECS-Game-Engine-Cmake

./: .gitignore
zengine/: CMakeLists.txt
zengine/assets/shaders/: fragShader.txt  vertShader.txt
zengine/contrib/include/: bugl.h
zengine/src/game/: main.cpp
zengine/src/myengine/: Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Mesh.cpp  Mesh.h  Model.cpp  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  Resources.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TriangleRenderer.cpp  TriangleRenderer.h  fragShader.txt  myengine.h  vertShader.txt  zengine - Shortcut.lnk
zengine/src/rend/: Texture.cpp
zengine/src/zenderer/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
zengine/src/zengine/: Audio.cpp  Audio.h  BoxCollider.cpp  BoxCollider.h  Collision.cpp  Collision.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  GUI.cpp  GUI.h  Input.cpp  Input.h  Maths.cpp  Maths.h  Model.cpp  Model.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  Resources.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  TriangleRenderer.h  Window.cpp  Window.h  myengine.h
